--- a/app/src/main/res/layout-large/baby_item.xml
+++ b/app/src/main/res/layout-large/baby_item.xml
@@ -26,7 +26,7 @@
                 android:orientation="vertical"
                 android:paddingRight="@dimen/_15dp">
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_marginTop="@dimen/spacing_mlarge"
@@ -277,7 +277,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:visibility="gone"
+                    android:visibility="invisible"
                     android:weightSum="4">
 
                     <LinearLayout
