--- a/app/src/main/res/layout/baby_item.xml
+++ b/app/src/main/res/layout/baby_item.xml
@@ -269,7 +269,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:visibility="gone"
+                    android:visibility="invisible"
                     android:weightSum="4">
 
                     <LinearLayout
