WHO Growth Transitioning

--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -294,6 +294,11 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+
+        <argument
+            android:name="data"
+            app:argType="com.intellisoft.nndak.models.DataDisplay" />
+
     </activity>
 
 </navigation>
