--- a/app/src/main/res/layout/activity_growth.xml
+++ b/app/src/main/res/layout/activity_growth.xml
@@ -21,17 +21,32 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="@dimen/_5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+        <include
+            android:id="@+id/breadcrumb"
+            layout="@layout/breadcrumb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_15dp" />
+
+        <include
+            android:id="@+id/inc_details"
+            layout="@layout/baby_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="400dp">
+
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
@@ -51,6 +66,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_baby_gender"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/padding_10"
@@ -62,13 +78,10 @@
                         android:layout_height="300dp"
                         android:orientation="horizontal">
 
-                        <TextView
+                        <com.intellisoft.nndak.utils.VerticalTextView
                             style="?attr/textAppearanceBody2"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_150dp"
-                            android:layout_marginBottom="@dimen/_10dp"
-                            android:rotation="-90"
+                            android:layout_height="match_parent"
                             android:text="@string/app_weeks"
                             android:textAlignment="center"
                             android:textSize="@dimen/_12dp" />
@@ -82,15 +95,98 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/growth_label"
                         style="?attr/textAppearanceBody2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_10dp"
                         android:text="@string/app_age"
                         android:textAlignment="center" />
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:cardCornerRadius="6dp"
+                app:cardElevation="2dp"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp">
+
+                    <TextView
+                        android:id="@+id/tv_current_weight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textSize="@dimen/_20sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_current_weight"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_compared_weight"
+                        android:textAlignment="center"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:visibility="gone" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:cardCornerRadius="6dp"
+                app:cardElevation="2dp"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp">
+
+                    <TextView
+                        android:id="@+id/tv_mother_milk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textSize="@dimen/_20sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_mothers_milk"
+                        android:textAlignment="center"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textSize="@dimen/_12dp" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
