--- a/app/src/main/res/layout/fragment_baby_dashboard.xml
+++ b/app/src/main/res/layout/fragment_baby_dashboard.xml
@@ -24,6 +24,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_previous"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_10"
+            android:text="Intergrowth chart"
+            android:textAllCaps="false"
+            android:textSize="12sp"
+            android:visibility="gone"
+            app:cornerRadius="@dimen/_25dp"
+            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
+            app:strokeColor="@color/colorPrimary" />
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -75,12 +90,11 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/growth_label"
                         style="?attr/textAppearanceBody2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_10dp"
-                        android:text="@string/app_age"
-
                         android:textAlignment="center" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
