--- a/app/src/main/res/layout/fragment_baby_lactation.xml
+++ b/app/src/main/res/layout/fragment_baby_lactation.xml
@@ -52,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/_15dp"
             android:orientation="horizontal">
 
