--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -356,7 +356,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/action_total_dhm"
+                        android:text="@string/action_dhm"
                         android:textSize="@dimen/_12dp"
                         android:textAppearance="?attr/textAppearanceBody2"/>
 
